fix: overflow error

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -502,4 +502,7 @@
     overflow-x:hidden;
     max-width:100vw;
   }
+  html{
+    overflow-x:hidden;
+  }
 }
